add entities and migration file

--- a/Nubelity.API/appsettings.json
+++ b/Nubelity.API/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=Nubelity;Username=postgres;Password=123456;Include Error Detail=true"
+  },
+  "Jwt": {
+    "Key": "C79x6PeAMvDU2GzFRyGYsCXp2TEqwux@X9KFmrHhXa*RU3*oD7yySfV6xX2HTttP",
+    "Issuer": "Nubelity.Application",
+    "Audience": "Nubelity.Application.Client",
+    "ExpireMinutes": 60
+  }
 }
