--- a/Nubelity.API/Nubelity.API.csproj
+++ b/Nubelity.API/Nubelity.API.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Nubelity.Application\Nubelity.Application.csproj" />
+    <ProjectReference Include="..\Nubelity.Infrastructure\Nubelity.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
