--- a/Nubelity.Infrastructure/Nubelity.Infrastructure.csproj
+++ b/Nubelity.Infrastructure/Nubelity.Infrastructure.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Persistence\Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Nubelity.Application\Nubelity.Application.csproj" />
+    <ProjectReference Include="..\Nubelity.Domain\Nubelity.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
