repositories interfaces and implementation, plus middleware configuration

--- a/Nubelity.Application/Nubelity.Application.csproj
+++ b/Nubelity.Application/Nubelity.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Nubelity.Domain\Nubelity.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
