add implementation services and auth controller, also seed data for Login

--- a/Nubelity.Application/Nubelity.Application.csproj
+++ b/Nubelity.Application/Nubelity.Application.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Nubelity.Domain\Nubelity.Domain.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.21" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\Nubelity.Domain\Nubelity.Domain.csproj" />
   </ItemGroup>
 
 </Project>
