add docker and readme file

--- a/Nubelity.API/appsettings.json
+++ b/Nubelity.API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=Nubelity;Username=postgres;Password=123456;Include Error Detail=true"
+    "DefaultConnection": "Host=nubelity-postgres;Port=5432;Database=Nubelity;Username=postgres;Password=postgres"
   },
   "Jwt": {
     "Key": "C79x6PeAMvDU2GzFRyGYsCXp2TEqwux@X9KFmrHhXa*RU3*oD7yySfV6xX2HTttP",
