--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,11 @@ services:
       POSTGRES_DB: Nubelity
     ports:
       - "5433:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
@@ -22,7 +27,8 @@ services:
       dockerfile: Nubelity.API/Dockerfile
     container_name: nubelity-api
     depends_on:
-      - nubelity-postgres
+      nubelity-postgres:
+        condition: service_healthy
     environment:
       ASPNETCORE_ENVIRONMENT: "Production"
       ConnectionStrings__DefaultConnection: "Host=nubelity-postgres;Port=5432;Database=Nubelity;Username=postgres;Password=postgres"
